...
    <string name="signIn">Sign In</string>
    <string name="ditto">Ditto</string>
    <string name="userName">Name</string>
    <string name="password">Password</string>
    <string name="home">Home</string>
    <string name="habits">Habits</string>
    <string name="due">DUE</string>
    <string name="profile">Profile</string>
    <string name="add_habit_event">Add a Habit Event</string>
    <string name="confirm_pw">Confirm Password</string>
    <string name="age">Age</string>
    <string name="register">Register</string>
    <string name="account_already">Already Have an Account</string>
    <string name="habit_title">Habit Name</string>
    <string name="comment">Comment</string>
...
