...

    <ListView
        android:id="@+id/due_today_custom_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/tabs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/duetoday_content"
        android:divider="@null"
        android:dividerHeight="0dp"/>
...
